# optibot-v2

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  TEST.MD  claude_lastchanges.md  docker-compose.yml  livekit.toml  livekit.toml.old-project-backup  null  pyproject.toml  run_livekit.py
app/: main.py
app/agents/: ivr_navigator.py  outbound_caller.py
app/api/: middleware.py  ops_ui.py  routes.py  tenant_auth.py
app/config/: __init__.py  features.py  settings.py
app/models/: __init__.py  call.py  dossier.py  message.py  session_state.py  tenant.py
data/: deepgram_keyterms.json  hold_agent_working_phrases.json  hold_ambiguous_phrases.json  hold_human_phrases.json  hold_system_phrases.json  known_mutuelles.json  memory_schema.sql  naturalizer_variations.json  rag_schema.sql  schema.sql  seed_actions.sql  seed_mutuelles.sql  ssml_abbreviations.json  ssml_months.json  ssml_patterns.json  stt_domain_corrections.json  stt_mutuelle_aliases.json  stt_term_aliases.json
docs/: claude_mcp_hardcoding_hunt_prompt.md  claude_research_brief_dynamic_runtime.md  dual_agent_testing.md  generate_architecture.py  generate_comparison.py  hold-and-keyword-optimization-plan.md  humanized_voice_orchestration_master_prompt.md  localhost_realtime_runbook.md  orchestration-research.md  production_resume.md  realtime_production_item_list.md  session_resume_2026-04-15.md  telnyx_configuration_runbook.md  test_scenarios.md  ultraplan_resume.md
infra/: livekit.yaml  prometheus.yml
scripts/: create_tenant.py  e2e_room_audio_test.py  hardcoding_audit.py  live_mic_test.py  live_session.py  localhost_audio_test.py  localhost_twiml_server.py  localhost_voice_test.py  setup_livekit_cloud.py  telnyx_setup.py  test_call.py  test_live_call.py  test_localhost_voice_call.py
tasks/: voice-agent-research.md
tests/: e2e_dual_real_room.py  e2e_livekit_room_probe.py  e2e_real_audio.py  e2e_roleplay_agent.py  test_main.py
(+49 files in other folders)
